# linguagraph

./: .gitattributes  .gitignore  Cargo.toml  README.md  config.e2e.toml  config.example.toml  gen_mapping.sh  linguagraph_input.json  split_markdown_table.py  test_dsl.json
.linguagraph/: graph_specification.json  ontology_catalog.json  ontology_embedding_cache.json  property_metadata.json
docs/: e2e-whitepaper.md  e2e.md  text2cypher-benchmark.md
examples/: aggregate_orders.json  api_local_demo.rs  api_rest_handler.rs  cameras_data.json  companies_data.json  companies_mapping.json  data.json  data_mapping.json  data_mapping_2.json  doc.json  doc_find.json  document.json  find_cameras.json  find_company_hybrid.json  find_company_semantic.json  find_people.json  fragment.txt  ingest.py  promptgen_input.json  query.py  run_traversal.json  traversal.json  usage.txt
examples/e2e/: camera.graph.json  camera.ontology.json  camera.questions.json  camera.suite.json  cameras-large.ontology.json  cameras-large.questions.json  cameras-large.suite.json  cameras.suite.json  canonical-semantic.suite.json  crm.suite.json  erp.suite.json  flippa.suite.json  text-chunks.suite.json  text2cypher-movies.suite.json
examples/e2e/cameras/: graph.json  ontology.json  questions.json
examples/e2e/canonical-semantic/: questions.json
examples/e2e/crm/: graph.json  ontology.json  questions.json
examples/e2e/erp/: graph.json  ontology.json  questions.json
examples/e2e/flippa/: ontology.json  questions.json
examples/e2e/text-chunks/: graph.json  ontology.json  questions.json
examples/e2e/text2cypher-movies/: gold_reference.json  graph.json  ontology.json  questions.json
examples/favicar/: cars.json  cars_mapping.json  clients.json  clients_mapping.json  events.json  events_mapping.json
examples/teye/: teye_data.json  teye_events_only_data.json  teye_mapping.json
scripts/: prepare-cameras-large-e2e.py  run-cameras-large-e2e.sh  run-canonical-semantic-e2e.sh  run-e2e.sh  run-embedding-bench.sh  run-embedding-e2e.sh
src/: e2e.rs  error.rs  lib.rs  main.rs  normalize.rs
src/api/: error.rs  handle.rs  mod.rs  model.rs  options.rs  traits.rs
src/ast/: binding.rs  filter.rs  from_dsl.rs  mod.rs  query.rs
src/builder/: cursor.rs  cypher.rs  insert.rs  match_part.rs  mod.rs  normalize.rs  plan.rs  return_part.rs  where_part.rs
src/cli/: commands.rs  explore.rs  mod.rs  repl.rs
src/config/: loader.rs  mod.rs
src/core/: entity_type_search.rs  factory.rs  inspect.rs  mod.rs  nl.rs  pipeline.rs
src/db/: introspect.rs  memgraph.rs  mock.rs  mod.rs  qdrant.rs  result.rs
src/dsl/: enrich.rs  mod.rs  parser.rs  schema.rs
src/embeddings/: bm25.rs  cache.rs  llama.rs  mock.rs  mod.rs  store.rs
src/explore/: classify.rs  dto.rs  export.rs  mod.rs  queries.rs  subgraph.rs  timeline.rs
src/graph/: builder.rs  builtins.rs  canonical.rs  mod.rs  ontologies.default.json  ontology.rs  ontology_storage.rs  postgres_spec_storage.rs  schema.rs  scope.rs  spec.rs  spec_storage.rs  types.rs
src/ingest/: delete.rs  document.rs  dsl.rs  graph.rs  mod.rs  planner.rs  soft_merge.rs
src/ingest/soft_merge/: candidates.rs  decision.rs  integration_tests.rs  lexical.rs  mod.rs  query.rs
src/llm/: mock.rs  mod.rs  openai.rs
src/mapgen/: collections.rs  describe.rs  interactive.rs  mod.rs  prompt.rs
src/mapper/: extractor.rs  graph.rs  mod.rs  path.rs  schema.rs
src/metadata/: extract.rs  file.rs  mod.rs
src/nl/: mod.rs
src/ontology/: mod.rs  namespace.rs  qdrant.rs  service.rs  store.rs
src/prompt/: builder.rs  generator.rs  knowledge.rs  mod.rs  ontologies.default.json  ontology.rs  ontology_suggest.rs  schema.rs  select.rs  storage.rs
src/promptgen/: analyzer.rs  builder.rs  inference.rs  knowledge.rs  mod.rs  template.rs
src/resolve/: ast.rs  mod.rs
src/service/: convert.rs  dto.rs  mod.rs
src/types/: builtin.rs  capability.rs  context.rs  mod.rs  op.rs  registry.rs  side_effect.rs
src/types/handlers/: core.rs  datetime.rs  keyword.rs  list.rs  mod.rs  semantic_text.rs  text.rs
tests/: cypher_builder.rs  document_ingest.rs  dsl_parsing.rs  end_to_end.rs  explorer.rs  ingest_pipeline.rs  knowledge_prompt.rs  promptgen.rs  property_types.rs  service_facade.rs  type_system.rs
