[package]
name = "linguagraph"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Natural language to Cypher pipeline backed by Memgraph"
license = "MIT OR Apache-2.0"
default-run = "linguagraph"

[lib]
name = "linguagraph"
path = "src/lib.rs"

[[bin]]
name = "linguagraph"
path = "src/main.rs"

# The embedding benchmark/e2e bins link the GGUF-backed embedder directly,
# so they only build when the `llama` feature is on.
[[bin]]
name = "linguagraph-embed-bench"
path = "src/bin/linguagraph-embed-bench.rs"
required-features = ["llama"]

[[bin]]
name = "linguagraph-embedding-e2e"
path = "src/bin/linguagraph-embedding-e2e.rs"
required-features = ["llama"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
# Optional OpenAPI schema derives. Enabled by downstream crates (e.g.
# senseflowai) that expose linguagraph's public ontology types over an
# HTTP API and need `utoipa::ToSchema`. Off by default so the library
# build stays free of the dependency.
utoipa = { version = "5", optional = true }
tabled = "0.15"
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync"] }
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
neo4rs = "0.8"
once_cell = "1"

# `llama-cpp-2` is gated behind the `llama` feature so the default build
# stays free of native deps. Tests and CI run on the deterministic mock
# embedder; the GGUF-backed embedder is wired in identically when the
# feature is enabled.
llama-cpp-2 = { git = "https://github.com/senseflowai/llama-cpp-rs", branch = "main", optional = true }
encoding_rs = "0.8.35"
uuid = { version = "1", features = ["v4", "v5"] }

# OpenAI-compatible LLM client (e.g. a self-hosted vLLM server). Gated
# behind the `openai` feature so the default library build stays
# HTTP-free; the CLI enables it by default.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

# Line editing + history for the interactive `explore repl` shell. Gated
# behind the `repl` feature so library consumers stay dependency-free.
rustyline = { version = "14", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }

[features]
cuda = ["llama-cpp-2/cuda"]
llama = ["dep:llama-cpp-2"]
# OpenAI-compatible LLM backend (vLLM and friends).
openai = ["dep:reqwest"]
# Direct Qdrant REST client for ontology/entity embedding storage + search.
qdrant = ["dep:reqwest"]
# Derive `utoipa::ToSchema` on public ontology types for OpenAPI consumers.
utoipa = ["dep:utoipa"]
# Interactive `explore repl` shell (rustyline line editing + history).
repl = ["dep:rustyline"]
default = ["llama", "openai", "qdrant", "repl"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
